@@ -4,6 +4,7 @@ Release 5.1.5 (unreleased)
 
 Bug fixes
 ---------
+- Lagrangian module: fix resuspension when having internal deposition.
 
 - Compressible model: fix inverted arguments for user velocity source terms.
 
@@ -16,7 +17,7 @@ Bug fixes
 
 - GUI: fixes for addition and handling of coal classes.
 
-- GUI: "rij" (coupled) field must return a NULL pointer for uncoupled RSM 
+- GUI: "rij" (coupled) field must return a NULL pointer for uncoupled RSM
   if initilization of turbulent variables is set by formula.
 
 - Fix an uninitialised option (reconstruction flag) if arakawa coef. is 0 and
